2004-12-26  Bastien Nocera  <hadess@hadess.net>

	* NEWS: updates
	* data/totem.glade: first try at updated controls popup
	* src/totem-playlist.c: (treeview_row_changed): emit the
	"changed" signal when double-clicking on an entry
	* src/totem-time-label.c: (totem_time_label_init),
	(totem_time_label_new): move most of new() code to init()
	* src/totem.c: (totem_action_restore_pl),
	(totem_action_set_mrl_with_warning), (totem_action_set_mrl),
	(on_recent_file_activate), (playlist_changed_cb), (move_popups),
	(on_video_motion_notify_event), (on_eos_event), (label_create):
	don't show a warning when opening the file when rewinding, or
	restoring a playlist, show an error message when trying to play
	a file that can't be opened

2004-12-26  Bastien Nocera  <hadess@hadess.net>

	* help/ru/.cvsignore:
	* src/.cvsignore: updated

2004-12-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem-stock-icons.c: (totem_named_icons_init): modified to
	look for the applets-screenshooter stock icon (Closes: #161705)

2004-12-24  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/Makefile.am:
	* src/bacon-video-widget-gst.c: (bacon_video_widget_new): fix
	compilation of the GStreamer backend (Closes: #159452)
	* src/bacon-video-widget-xine.c: (bacon_video_widget_get_metadata):
	fix assert when getting the Musicbrainz disc ID
	* src/metadata-test.c: add a metadata test program
	* src/totem-private.h: remove keypress_time member
	* src/totem-properties-page.c: (set_property): don't try to play if
	we didn't manage to open the file
	* src/totem.c: (totem_action_set_mrl), (on_eos_event),
	(totem_action_handle_key): remove fullscreen hysteris work-around,
	don't have a MRL in the Totem object if we're in logo mode
	(Closes: #161371)

2004-12-23  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_init),
	(load_audio_out_driver), (bacon_video_widget_realize),
	(bacon_video_widget_new), (bacon_video_widget_open),